--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "hyperf/testing": "~2.2.0",
         "hyperf/watcher": "^2.2",
         "mockery/mockery": "^1.0",
+        "phpstan/phpstan": "^1.5",
         "swoole/ide-helper": "^4.5"
     },
     "suggest": {
